Fix comments in dark mode

--- a/assets/stylesheets/koenig.css
+++ b/assets/stylesheets/koenig.css
@@ -1,4 +1,4 @@
-#ghost-portal-root {
+#ghost-portal-root, #ghost-comments-root {
   color-scheme: light;
 }
 
